# Telemetry-Control-System

./: README.md
.github/workflows/: TCS-Mini.yml  TCS.yml  software.yml
DBC/: SR.dbc
Software/tcs_app/: tcs_app.py  uart_data_read.py
TCS-Master/TCSDG-TCS-Master-Main/: README.md
TCS-Master/TCSDG-TCS-Master-Main/tcsmain/: CMakeLists.txt  sdkconfig  sdkconfig.old
TCS-Master/TCSDG-TCS-Master-Main/tcsmain/main/: CMakeLists.txt  Kconfig.projbuild  can_lora.c  can_lora.h  crash_imu.c  crash_imu.h  humidity.c  humidity.h  lora_handler.c  lora_handler.h  main.c  main.h  rgb_ledc_controller.c  telemetry.c  telemetry.h
TCS-Mini/TCSDG-TCS-Mini-LoRa/: .cproject  CMakeLists.txt  sdkconfig
TCS-Mini/TCSDG-TCS-Mini-LoRa/main/: CMakeLists.txt  Kconfig.projbuild  http_server.c  lora_app.c  lora_app.h  main.c  uart_app.c  uart_app.h  web_app.c  web_app.h  wifi_app.c  wifi_app.h
TCS-Mini/TCSDG-TCS-Mini-LoRa/main/webpage/: app.css  app.js  index.html
Vehicle-Emulator/sending/: sdkconfig
Vehicle-Emulator/sending/main/: main.c
